# tuw_education_notebooks

./: .gitignore  .nojekyll  01_notebook_as_an_app.de.ipynb  01_notebook_as_an_app.de.qmd  01_notebook_as_an_app.html  01_notebook_as_an_app.ipynb  01_notebook_as_an_app.qmd  02_counterexample.de.ipynb  02_counterexample.de.qmd  02_counterexample.html  02_counterexample.ipynb  02_counterexample.qmd  02_tweak_and_twiddle.ipynb  Makefile  README.md  _quarto.yml  environment.yml  index.de.qmd  index.html  index.qmd  postBuild  preRelease  pyproject.toml  references.bib  references.html  robots.txt  search.json  setup.cfg  sitemap.xml
.ipynb_checkpoints/: 01_notebook_as_an_app-checkpoint.ipynb
data/colour-tables/: ssm-continuous.ct
data/s1_parameters/S1_CSAR_IWGRDH/PLIA-TAG/V01R03/EQUI7_EU020M/E054N006T3/: PLIA-TAG-MEAN_20200101T000000_20201231T235959__D080_E054N006T3_EU020M_V01R03_S1IWGRDH.nc
data/s1_parameters/S1_CSAR_IWGRDH/SIG0/V1M1R1/EQUI7_EU020M/E054N006T3/: SIG0_20180228T043908__VV_D080_E054N006T3_EU020M_V1M1R1_S1AIWGRDH_TUWIEN.nc
de/: 01_notebook_as_an_app.de.html  02_counterexample.de.html  index.de.html  index.html  references.de.html  search.json  sitemap.xml
src/tuw_education_notebooks/: __init__.py  calc_bayes_flood.py  calc_priors.py  view_bayes_flood.py  view_monthly_ssm.py  view_seasonal_ssm.py
