[metadata]
name = tuw_education_notebooks
version = attr: tuw_education_notebooks.__version__
description = Examples of TUWien Jupyter notebooks for education
author = TU Wien GEO MRS group
author_email = martin.schobben@geo.tuwien.ac.at
long_description = file: README.md
url = https://git.geo.tuwien.ac.at/mschobbe/tuw_education_notebooks
platforms = any
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
install_requires =
    eomaps
    numpy
    scipy
    xarray[complete]
    zarr
    netcdf4
    ipykernel 
    ipympl 
    ipywidgets
    jupyter-cache
    datashader

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
